<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/white2"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:text="About Us"
        android:textColor="#151414"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dip"
        android:text="@string/longtext1"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="123dp"
        android:background="#D4AF37"
        android:backgroundTint="#D4AF37"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/address"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignLeft="@id/textView2"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="5dp"
        android:text="@string/longtext2"
        android:textColor="#161616"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="170dp"
        android:background="#D4AF37"
        android:backgroundTint="#D4AF37"
        app:srcCompat="@android:drawable/ic_menu_call" />


    <TextView
        android:id="@+id/phone"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignLeft="@id/textView2"
        android:layout_alignParentBottom="false"
        android:layout_centerVertical="true"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="2dp"
        android:text="@string/longtext3"
        android:textColor="#161616"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="211dp"
        android:background="#D4AF37"
        android:backgroundTint="#D4AF37"
        app:srcCompat="@android:drawable/sym_action_email" />


    <TextView
        android:id="@+id/textEmail"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignLeft="@id/textView2"
        android:layout_alignParentBottom="false"
        android:layout_centerVertical="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="2dp"
        android:text="@string/longtext4"
        android:textColor="#161616"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignLeft="@id/textView2"
        android:layout_centerInParent="true"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="163dp"
        android:gravity="center"
        android:text="@string/messageWithlink"
        android:textColor="#D4AF37"
        android:textColorHighlight="#D4AF37"
        android:textColorHint="#D4AF37"
        android:textColorLink="#D4AF37"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="View our website" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:background="#1B1919"
        app:srcCompat="@drawable/gold" />

</RelativeLayout>